# AiHBridge

./: .env  .gitignore  README.md  db.sqlite3  pyproject.toml
SavedLists/: apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
SavedLists/migrations/: 0001_initial.py
accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_username.py  0003_user_reset_code.py  0004_user_reset_token.py  0005_user_reset_code_created_at.py
core/management/commands/: seed.py
follows/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
frontend_build/: index.html
frontend_build/assets/: index-DQweXeLW.js  index-jWK261DE.css
interactions/: admin.py  mixins.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
notifications/: admin.py  apps.py  models.py  observers.py  serializers.py  tests.py  urls.py  views.py
observer/: apps.py  dispatcher.py  events.py  observers.py
posts/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py
profiles/: models.py  serializers.py  tests.py  urls.py  views.py
project/: settings.py  urls.py
reactapp/: .env  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.tsbuildinfo  vite.config.ts
reactapp/src/: App.tsx  index.css
reactapp/src/components/: Header.tsx  HighlightedTools.tsx  Notifications.tsx  ProfileOverview.tsx  RightBar.tsx  SaveListDialog.tsx  TrendingTools.tsx  app-sidebar.tsx  nav-main.tsx
search/: serializers.py  tests.py  urls.py  utils.py  views.py
summaries/: serializers.py  services.py  urls.py  views.py
(+76 files in other folders)
